# zero_x_infinity

./: .gitignore  0x01-genesis.md  AGENTS.md  Cargo.toml  LICENSE  README.md  README_CN.md  build.rs  docker-compose.yml  funding_failed_end.txt  funding_failed_log.txt  job_api_log.txt  job_log.txt  job_log_new.txt  pyproject.toml  run_test.sh  sentinel_log.txt  test_push_logic.py  test_websocket.sh  test_ws_client.py  verify_all.sh
.agent/handover/: 2025-12-22-0x0A-account-system.md
.cargo/: config.toml
.github/workflows/: admin-tests.yml  basic-checks.yml  ci.yml  full-system-verification.yml  integration-tests.yml  mdbook.yml  regression.yml  verify-0x11b-sentinel.yml  verify-0x14b-order-commands.yml  verify-e2e-suite.yml
.sqlx/: query-0932f17b74df6ed58b2d8d986dd6597c2f5259c9aac2e0309778c84a2f26d8b9.json  query-0e324070b962e46ee9b9fdef3a32a842f752a26d2f79e2e9fbb39052fce9fae9.json  query-0e5d1fbfc6b9402e02f4bb91f2fb93777d688f69d348a8c8e03d59236c96fb39.json  query-2927553048a3c114d382a066488414de3aca2a38ea21d710a4b78b4617a5eba4.json  query-2bc0d31bd58f62b09ebcd35c0599465a22017eff63025052c2c056e5db3b5737.json  query-2e9d8a5678cd7678828696ea6d8e9ff7071acb3e8fe2807e16fed69fc8d37772.json  query-31ac465ac41352bf04216fde345b55000d93851fa99b29322ec17dac5f8ef38d.json  query-32afe605bcbb880d02556813e5b51c23c38178d367453aaec8db51f672c50ca5.json  query-4120e68be893efb50169da29531af3b45117249433e788bd64ed3b14cf6a0ac3.json  query-45e7a3123fca151bf46be0a6401c1a60ce8f62c3c034c9ff642713cdec65153f.json  query-4b8a8ae118092555c9f226b53568d9e8c9b02676fa38f6894955ffe970b1c8e5.json  query-53f742790b5e5aef377d3b387685ac7a35796afa904757811949d2c1f3344ab3.json  query-55e1dbeb91dc55d142a467d73583ca79c976ca8d5298a2dcdc2b0331b7bdaae6.json  query-64034319172d295f98b54d15662fba52253cf57f1003e08067ea2376a8c8b508.json  query-7f1fc5c974a27b2ed695278e6a218c1a7e8be4ccabfcae8f9943db890e8feddd.json  query-82d0eac35c0765efa3d660dbe4961d9cab107de3c608cf821393e2047123568e.json  query-841b525085ab2d48a0af95b12d7b6c991619f26f376aaf31c149af4d3ee7c072.json  query-86ef6cf498815b24f905b86992a124a9ffe43f9431adbbc00e818901b89fca32.json  query-8fb39cff105eff2e49d91b4c7076c8c98ad26ca85cf0e38f7a18aa42334bcb1e.json  query-9f892788476694ad3c63e3c687b599bb6fdba391f4620a8525aac1593420c3f8.json  query-a5b3f3009309262a9b69fef132db743588177f904f709cdd6e221f134868430a.json  query-a7e7cf0a4f39d1a2822a237b4ec7c5cdc6613dcf8a7f27c8a52fcb8bd7ceffb7.json  query-b82b4fc3ee570f29a5c6475e8773b12a3c038573dd12b21b3e773d8a3b0b59b2.json  query-bf5d511bf0326aae0fe9947459cac47ef042790320e47f7673c071866c67e04f.json  query-d5e24c4377b2b12b8010026b61409e9a03d2496b179543704de28d7f7ac2e273.json  query-d6bb15a9eb8196efd2fa9245aee8f0b69ef167cc3a13b95cbd7142c7508e908e.json  query-db5df58d99bbac3c85e3c1d6f991b9a467c22a8a706b31d10b7589e7d46e2378.json  query-e17c23d69bb1f0089398c35195a74acdd0c4868e4a1d02c3c7c7003093527304.json  query-f994e4c31a5360d3cca752666f5b63653a88e722707cc5e04053698bc85e669f.json
admin/: .env.example  .gitignore  README.md  TEST_README.md  check_db_visibility.py  cleanup_test_data.py  database.py  init_db.py  list_routes.py  logging_config.py  main.py  requirements.txt  run_tests.sh  settings.py  test_admin_gateway_e2e.py  test_admin_verify_all.sh  test_quick.sh  test_ui_e2e.py  test_ui_poc.py  verify_all.sh  verify_e2e.py  verify_final.sh
admin/admin/: __init__.py  asset.py  audit_log.py  chain.py  symbol.py  vip_level.py
admin/auth/: __init__.py  audit_middleware.py  password.py
admin/models/: __init__.py  tables.py
admin/schemas/: __init__.py  asset.py  symbol.py  vip_level.py
baseline/: README.md  t1_balances_deposited.csv  t2_balances_final.csv  t2_orderbook.csv  t2_perf.txt  t2_summary.txt
config/: audit_ubscore.yaml  ci.yaml  dev.yaml  prod.yaml  sentinel_config.yaml  test.yaml  test_persistence.yaml
docs/: CRITICAL-missing-tdengine-persistence.md  NAMING_CONVENTION.md  README.md  book.toml  dev-reference-account-id.md  fix-remove-account-id.md  openapi.json  settlement-persistence-status.md
examples/: the_curse_of_float.rs  tui_monitor.rs
fixtures/: assets_config.csv  balances_init.csv  manual_seed.sql  orders.csv  seed_data.sql
migrations/: 001_init_schema.sql  002_add_uppercase_constraints.sql  002_create_api_keys.sql  003_internal_transfer.sql  004_fsm_transfers.sql  005_account_status.sql  005_consolidate_transfer_id.sql  006_consolidate_transfer_id.sql  007_admin_audit_log.sql  007_trade_fee.sql  009_users_auth.sql  010_deposit_withdraw.sql  011_chain_cursor.sql  011_rename_network_to_chain_id.sql  012_audit_log_trace_id.sql  012_chain_assets.sql  013_precision_terminology.sql  20251228180000_chain_cursor.sql  999_temp_violation.sql
scripts/: audit_api_types.sh  audit_matching_adversarial.sh  audit_money_safety.sh  audit_settlement_adversarial.sh  audit_silent_defaults.sh  audit_ubscore_adversarial.sh  check_deps.sh  ci_clean.py  compare_balances_tdengine.py  compare_orders_tdengine.py  compare_perf.py  compare_settlement.py  compare_trades_tdengine.py  dump_balances.py  dump_tdengine.py  generate_baseline.sh  generate_orders.py  generate_orders_with_cancel.py  generate_orders_with_cancel_highbal.py  generate_perf_report.py  init_tdengine_schema.sh  inject_orders.py  install-hooks.sh  install_hooks.sh  one_shot_verify.sh  query_api.py  query_balances.py  run_0x11a_verification.sh  run_0x11b_e2e.sh  run_0x11b_e2e_full.sh  run_0x11b_oneclick.sh  run_admin_full_suite.sh  run_admin_gateway_dev.sh  run_admin_gateway_e2e.sh  run_admin_tests_standalone.sh  setup-dev.sh  setup-hooks.sh  test_01_generate.sh  test_02_baseline.sh  test_03_verify.sh  (+62 more)
src/: balance.rs  config.rs  config_watcher.rs  core_types.rs  csv_io.rs  enforced_balance.rs  engine.rs  fee.rs  ledger.rs  lib.rs  logging.rs  main.rs  messages.rs  models.rs  money.rs  orderbook.rs  perf.rs  pipeline.rs  pipeline_mt.rs  pipeline_runner.rs  pipeline_services.rs  symbol_manager.rs  ubscore.rs  user_account.rs  wal.rs  wal_v2.rs
test-reports/: junit-report.xml
test_account/: assets_config.csv  symbols_config.csv
tests/: qa_0x14b_independent.rs
(+591 files in other folders)
