[package]
name = "zero_x_infinity"
version = "0.1.0"
edition = "2024"
description = "Order book matching engine"

[dependencies]
rustc-hash = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
crossbeam-queue = "0.3"  # Bank-grade: ArrayQueue, used by tokio/actix/rayon
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Gateway HTTP server
axum = "0.8"
tokio = { version = "1", features = ["full"] }
rust_decimal = "1.36"

# TDengine persistence
taos = { version = "0.12", features = ["ws", "ws-rustls"] }
anyhow = "1.0"

