[package]
name = "zero_x_infinity"
version = "0.1.0"
edition = "2024"
description = "The Hardest Core HFT Exchange Engine in Rust. From Hello World to 1.3M TPS."
repository = "https://github.com/gjwang/zero_x_infinity"
homepage = "https://gjwang.github.io/zero_x_infinity/"
documentation = "https://gjwang.github.io/zero_x_infinity/"
license = "MIT"
keywords = ["trading", "hft", "exchange", "matching-engine", "latency"]
categories = ["finance", "algorithms", "concurrency"]
readme = "README.md"

[dependencies]
rustc-hash = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
crossbeam-queue = "0.3"  # Bank-grade: ArrayQueue, used by tokio/actix/rayon
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Gateway HTTP server
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
rust_decimal = "1.36"

# WebSocket support
tokio-tungstenite = "0.21"
dashmap = "5.5"

# TDengine persistence - optin (libtaos native) + WebSocket fallback
taos = { version = "0.12", features = ["optin", "ws", "ws-rustls"] }
anyhow = "1.0"
futures = "0.3"
chrono = { version = "0.4.42", features = ["serde"] }
once_cell = "1.21.3"

# PostgreSQL for account management
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "rust_decimal"] }
thiserror = "2.0.17"

# API Authentication (Ed25519 signatures)
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
num-bigint = "0.4"
num-integer = "0.1"

# Internal Transfer FSM (Phase 0x0B-a)
async-trait = "0.1"

[dev-dependencies]
crossterm = "0.29.0"
ratatui = "0.29.0"
