[project]
name = "zero-x-infinity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
    "aiohttp>=3.13.2",
    "pandas>=2.3.3",
    "playwright>=1.57.0",
    "psycopg2-binary>=2.9.11",
    "pynacl>=1.6.1",
    "pytest-playwright>=0.7.2",
    "requests>=2.32.5",
    "taos-ws-py>=0.6.3",
    "websocket-client>=1.9.0",
    "websockets>=15.0.1",
]
