[project]
name = "zero-x-infinity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
    "aiohttp>=3.13.2",
    "bech32>=1.2.0",
    "pandas>=2.3.3",
    "playwright>=1.57.0",
    "psycopg2-binary>=2.9.11",
    "pynacl>=1.6.1",
    "pytest-playwright>=0.7.2",
    "requests>=2.32.5",
    "taos-ws-py>=0.6.3",
    "websocket-client>=1.9.0",
    "websockets>=15.0.1",
    # Admin Dashboard Dependencies
    "fastapi==0.109.2",
    "uvicorn[standard]>=0.24.0",
    "fastapi-amis-admin==0.7.3",
    "fastapi-user-auth==0.7.3",
    "sqlalchemy[asyncio]>=2.0.0",
    "sqlmodel==0.0.16",
    "asyncpg>=0.29.0",
    "greenlet>=3.0.0",
    "pydantic>=2.0.0,<2.10",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "bcrypt>=4.0.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "anyio>=4.0.0",
    "python-ulid>=3.0.0",
    "loguru>=0.7.0",
]
